tests/snapshots/preview__preview_offset_fixed@001.snap
---
source: tests/preview.rs
description: "input: items [\"a\", \"b\"]\noptions: --preview printf \"=%.0s\\n\" $(seq 1 1000) --preview-window left:+123"
---
"                               123/1000│                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │  b                                     "
"=                                      │> a                                     "
"=                                      │  2/2                                0/0"
"=                                      │>                                       "
cursor: (24, 43)
