tests/snapshots/preview__preview_offset_fixed_and_expr@001.snap
---
source: tests/preview.rs
description: "input: items [\"123 321\"]\noptions: --preview printf \"=%.0s\\n\" $(seq 1 1000) --preview-window left:+{2}-2"
---
"                               319/1000│                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │                                        "
"=                                      │> 123 321                               "
"=                                      │  1/1                                0/0"
"=                                      │>                                       "
cursor: (24, 43)
