tests/snapshots/preview__preview_plus-3.snap
---
source: tests/preview.rs
expression: buf + & cursor_pos
---
"                                        │b                                      "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> c                                     │                                       "
" >b                                     │                                       "
"  a                                     │                                       "
"  3/3 [1]                            2/0│                                       "
">                                       │                                       "
cursor: (24, 3)
