tests/snapshots/preview__preview_plus-4.snap
---
source: tests/preview.rs
expression: h.buffer_view()
---
"                                        │b c                                    "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
">>c                                     │                                       "
" >b                                     │                                       "
"  a                                     │                                       "
"  3/3 [2]                            2/0│                                       "
">                                       │                                       "
