tests/snapshots/preview__preview_plus-5.snap
---
source: tests/preview.rs
expression: h.buffer_view()
---
"                                        │c                                      "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"> c                                     │                                       "
"  b                                     │                                       "
"  a                                     │                                       "
"  3/3                                2/0│                                       "
">                                       │                                       "
