tests/snapshots/preview__preview_plus.snap
---
source: tests/preview.rs
expression: h.buffer_view()
---
"                                        │a                                      "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"                                        │                                       "
"  c                                     │                                       "
"  b                                     │                                       "
"> a                                     │                                       "
"  3/3                                0/0│                                       "
">                                       │                                       "
